# naemon-core

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LEGAL  Makefile.am  Makefile.in  NEWS  README  README.md  UPGRADING  autogen.sh  behave.ini  configure.ac  configure.in  daemon-init.in  daemon-systemd.in  doxy.conf  get_version  indent-all.sh  indent.sh  naemon-core.spec  naemon-query.py  naemon-uninstalled.pc.in  naemon.logrotate.el7.in  naemon.logrotate.in  naemon.pc.in  naemon.rpmlintrc  naemon.spec  naemon.sysconfig  naemon.tmpfiles.conf  tests.mk  update-version  version.sh
.github/workflows/: citest.yml  codeql.yml
.obs/: workflows.yml
base/: .gitignore  Makefile.in  broker.c  checks.c  commands.c  config.c  events.c  flapping.c  logging.c  naemon.c  naemonstats.c  nagios.c  nebmods.c  nerd.c  notifications.c  perfdata.c  query-handler.c  sehandlers.c  sretention.c  utils.c  workers.c
cgi/: Makefile.in
common/: Makefile.in  comments.c  downtime.c  macros.c  objects.c  shared.c  statusdata.c
contrib/: Makefile.in  naemon-qh.rb
debian/: changelog  control  copyright  libnaemon.install  libnaemon.lintian-overrides  naemon-core-dbg.install  naemon-core-dbg.lintian-overrides  naemon-core.dsc  naemon-core.install  naemon-core.links  naemon-core.lintian-overrides  naemon-core.manpages  naemon-core.naemon.init  naemon-core.naemon.service  naemon-core.naemon.tmpfiles  naemon-core.postinst  naemon-core.postrm  naemon-core.preinst  naemon-core.prerm  naemon-dev.install  naemon-dev.lintian-overrides  rules
docs/: queryhandlers.dox  workers.dox
features/: daemonize.feature  environment.py  logging.feature  restart.feature
include/: broker.h  cgiutils.h  comments.h  config.h.in  getcgi.h  macros.h  naemon.h  nagios.h  neberrors.h  nebmodules.h  perfdata.h  shared.h  statusdata.h
lib/: .gitignore  Makefile  Makefile.in  bitmap.h  bufferqueue.c  bufferqueue.h  dkhash.c  fanout.h  iobroker.c  iobroker.h  iocache.c  kvvec.c  kvvec.h  kvvec_ekvstr.c  kvvec_ekvstr.h  libnaemon.h  libnagios.h  lnae-utils.h  lnag-utils.h  nsock.c  nsock.h  nspath.c  nspath.h  nsutils.c  nsutils.h  objutils.c  objutils.h  pqueue.h  rbtree.h  runcmd.c  runcmd.h  skiplist.c  skiplist.h  snprintf.c  test-bufferqueue.c  test-dkhash.c  test-fanout.c  test-iobroker.c  test-kvvec.c  test-nsutils.c  (+3 more)
module/: helloworld.c
naemon/: .gitignore  Makefile.am  broker.c  broker.h  cgiauth.h  cgiutils.h  checks.c  checks.h  checks_host.c  checks_host.h  checks_service.c  checks_service.h  commands.c  commands.h  comments.c  comments.h  common.h  config.c  configuration.c  configuration.h  defaults.c  defaults.h  defaults.h.in  downtime.c  downtime.h  events.c  events.h  flapping.c  flapping.h  globals.h  loadctl.h  logging.c  logging.h  macros.c  macros.h  naemon.c  naemon.h  naemonstats.c  nebcallbacks.h  neberrors.h  (+41 more)
naemon/lib/: .gitignore  Makefile.am  bitmap.c  bitmap.h  dkhash.c  dkhash.h  fanout.h  iobroker.h  iocache.h  kvvec.c  kvvec.h  libnaemon.h  libnagios.h  lnae-utils.h  nsock.c  nsock.h  nspath.c  nspath.h  nsutils.c  nsutils.h  pqueue.c  pqueue.h  rbtree.c  rbtree.h  runcmd.c  runcmd.h  skiplist.h  snprintf.c  squeue.c  squeue.h  t-utils.c  t-utils.h  test-dkhash.c  test-fanout.c  test-iobroker.c  test-iocache.c  test-runcmd.c  test-squeue.c  worker.c  worker.h
op5build/: ci_config.yml  generate_version_number.sh  kad.conf  limits.conf  naemon.service.in  naemon.spec
sample-config/: Makefile.am  README  naemon.cfg.in  naemon.sysconfig  resource.cfg.in
sample-config/conf.d/: commands.cfg.in  contacts.cfg.in  localhost.cfg.in  printer.cfg.in  switch.cfg.in  timeperiods.cfg.in  windows.cfg.in
sample-config/conf.d/templates/: contacts.cfg.in  hosts.cfg.in  services.cfg.in
sample-config/template-object/: printer.cfg.in  switch.cfg.in  templates.cfg.in
src/naemon/: .gitignore  (+99 more)
t/: .gitignore  705naemonstats.t  705nagiostats.t  900-configparsing.t  910-noservice.t  920-nocontactgroup.t  930-emptygroups.t  Makefile.am  testall.sh
t-tap/: .gitignore  Makefile.am  Makefile.in  fixtures.c  fixtures.h  stub_objects.c  stub_perfdata.c  stub_shared.c  test-stubs.c  test_checks.c  test_commands.c  test_config.c  test_downtime.c  test_events.c  test_logging.c  test_macros.c  test_nagios_config.c  test_neb_callbacks.c  test_timeperiods.c  test_xsddefault.c
t-tap/smallconfig/: minimal.cfg  naemon.cfg
t/etc/: duplicate-host-error.cfg  duplicate-service-warning.cfg  hosturgencies.cfg  main-servicedeps.cfg  minimal.cfg  missing-service-description-error.cfg  naemon-duplicate-host-error.cfg  naemon-duplicate-service-warning.cfg  naemon-empty-groups.cfg  naemon-hosturgencies.cfg  naemon-missing-service-description-error.cfg  naemon-no-contactgroup.cfg  naemon-no-service.cfg  naemon-no-status.cfg  naemon-service-dependencies.cfg  naemon-with-generated-status.cfg  naemon.cfg  nagios-with-generated-status.cfg  nagios.cfg  no-contactgroup-error.cfg  no-objects.cfg  no-service-error.cfg  oconf-servicedeps.cfg  service-dependencies.cfg
t/var/: objects.cache  objects.cache.hosturgencies  objects.precache.expected  objects.precache.naemon-service-dependencies.expected
tap/: Makefile.am  README.naemon  configure.ac
tests/: .gitignore  Makefile.am  test-arith.c  test-check-dependencies.c  test-check-result-processing.c  test-check-scheduling.c  test-checks.c  test-config.c  test-event-heap.c  test-external-command-nebcallback.c  test-kv-command.c  test-kvvec-ekvstr.c  test-kvvec.c  test-log.c  test-neb-callbacks.c  test-obj-config-parse.c  test-objects.c  test-query-handler.c  test-retention.c  test-scheduled-downtimes.c  test-service-states.c  test-utils.c  test-worker.c
tests/configs/inc/: has_notification_timeout.cfg  naemon.cfg
tests/configs/includes/has_event_handler_timeout/: is_a_config.cfg  is_not_a_config
tests/configs/recursive/: minimal.cfg  naemon.cfg
tests/configs/services/: minimal.cfg  naemon.cfg
tests/configs/tabs/: host.cfg
tests/configs/umlauts/: host.cfg  naemon.cfg
xdata/: Makefile.in  xcddefault.c  xodtemplate.c  xpddefault.c  xpddefault.h  xrddefault.c  xsddefault.c
(+22 files in other folders)
